--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,6 @@ on:
 
 env:
   AWS_REGION: "us-east-1"
-  TF_BACKEND_BUCKET: "dmisi-terraform-state"
 
 jobs:
   terraform:
@@ -43,7 +42,7 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Terraform Init
-      run: terraform init -backend-config="bucket=$TF_BACKEND_BUCKET"
+      run: terraform init 
 
     - name: Terraform Format
       run: terraform fmt -check -recursive
