--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,6 +16,10 @@ jobs:
       contents: read
       id-token: write
 
+    defaults:
+      run:
+        working-directory: terraform
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
