--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -56,3 +56,42 @@ jobs:
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+
+    - name: Extract IP addresses from Terraform output
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: |
+        mkdir -p inventory
+        echo "[webservers]" > inventory/dynamic.ini
+        terraform output -json webserver_ips | jq -r '.[]' | while read ip; do
+          echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@${BASTION_IP}'\"" >> inventory/dynamic.ini
+        done
+        # Витягуємо IP бастіона
+        BASTION_IP=$(terraform output -json bastion_public_ip | jq -r '.')
+        echo "BASTION_IP=$BASTION_IP" >> $GITHUB_ENV
+
+  ansible:
+    name: 'Ansible Deployment'
+    runs-on: ubuntu-latest
+    needs: terraform
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/bastion-key.pem
+        chmod 600 ~/.ssh/bastion-key.pem
+        ssh-keyscan -H ${BASTION_IP} >> ~/.ssh/known_hosts
+
+    - name: Install Ansible
+      run: |
+        sudo apt update
+        sudo apt install -y ansible
+
+    - name: Run Ansible Playbook
+      run: |
+        ansible-playbook -i inventory/dynamic.ini playbooks/deploy.yml
+      env:
+        ANSIBLE_HOST_KEY_CHECKING: False
