--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,6 +57,10 @@ jobs:
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
 
+    - name: Wait for infrastructure to stabilize
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: sleep 30
+
     - name: Extract IP addresses from Terraform output
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
@@ -65,9 +69,9 @@ jobs:
         terraform output -json webserver_ips | jq -r '.[]' | while read ip; do
           echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@${BASTION_IP}'\"" >> inventory/dynamic.ini
         done
-        # Витягуємо IP бастіона
         BASTION_IP=$(terraform output -json bastion_public_ip | jq -r '.')
         echo "BASTION_IP=$BASTION_IP" >> $GITHUB_ENV
+        echo "Extracted BASTION_IP: $BASTION_IP"
 
   ansible:
     name: 'Ansible Deployment'
@@ -83,6 +87,10 @@ jobs:
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/bastion-key.pem
         chmod 600 ~/.ssh/bastion-key.pem
+        if [ -z "${BASTION_IP}" ]; then
+          echo "BASTION_IP is empty, exiting..."
+          exit 1
+        fi
         ssh-keyscan -H ${BASTION_IP} >> ~/.ssh/known_hosts
 
     - name: Install Ansible
