--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [main]
   pull_request:
+  workflow_dispatch:
 
 env:
   AWS_REGION: "us-east-1"
@@ -54,21 +55,29 @@ jobs:
       run: terraform plan -input=false
 
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
       run: terraform apply -auto-approve -input=false
 
     - name: Wait for infrastructure to stabilize
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
       run: sleep 30
 
+    - name: Terraform Refresh
+      if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+      run: terraform refresh
+
     - name: Extract IP addresses from Terraform output
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
       run: |
         mkdir -p inventory
         echo "[webservers]" > inventory/dynamic.ini
+        echo "Terraform output for webserver_ips:"
+        terraform output -json webserver_ips
         terraform output -json webserver_ips | jq -r '.[]' | while read ip; do
           echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@${BASTION_IP}'\"" >> inventory/dynamic.ini
         done
+        echo "Terraform output for bastion_public_ip:"
+        terraform output -json bastion_public_ip
         BASTION_IP=$(terraform output -json bastion_public_ip | jq -r '.')
         echo "BASTION_IP=$BASTION_IP" >> $GITHUB_ENV
         echo "Extracted BASTION_IP: $BASTION_IP"
@@ -77,7 +86,7 @@ jobs:
     name: 'Ansible Deployment'
     runs-on: ubuntu-latest
     needs: terraform
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
