Change workflow file

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,7 @@ jobs:
       contents: read
       id-token: write
 
-    outputs:  # Визначаємо outputs для цього job
+    outputs:
       bastion_ip: ${{ steps.extract.outputs.bastion_ip }}
 
     steps:
@@ -70,7 +70,7 @@ jobs:
       run: terraform refresh
 
     - name: Extract IP addresses from Terraform output
-      id: extract  # Додаємо id для цього кроку
+      id: extract
       if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
       run: |
         mkdir -p inventory
@@ -83,8 +83,10 @@ jobs:
         echo "Terraform output for bastion_public_ip:"
         terraform output -json bastion_public_ip
         BASTION_IP=$(terraform output -json bastion_public_ip | jq -r '.')
-        echo "Extracted BASTION_IP: $BASTION_IP"
-        echo "bastion_ip=$BASTION_IP" >> $GITHUB_OUTPUT  # Зберігаємо BASTION_IP як output
+        echo "BASTION_IP=$BASTION_IP" >> $GITHUB_ENV
+        echo "bastion_ip=$BASTION_IP" >> $GITHUB_OUTPUT
+        echo "Generated inventory file content:"
+        cat inventory/dynamic.ini
 
   ansible:
     name: 'Ansible Deployment'
