--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -123,10 +123,10 @@ jobs:
       run: |
         echo "Current directory: $(pwd)"
         ls -la
-        if [ ! -f playbooks/deploy.yml ]; then
-          echo "File playbooks/deploy.yml not found!"
+        if [ ! -f ansible/playbooks/deploy.yml ]; then
+          echo "File ansible/playbooks/deploy.yml not found!"
           exit 1
         fi
-        ansible-playbook -i inventory/dynamic.ini playbooks/deploy.yml
+        ansible-playbook -i inventory/dynamic.ini ansible/playbooks/deploy.yml
       env:
         ANSIBLE_HOST_KEY_CHECKING: False
