--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,18 +73,26 @@ jobs:
       id: extract
       if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
       run: |
-        mkdir -p inventory
-        echo "[webservers]" > inventory/dynamic.ini
-        echo "Terraform output for webserver_ips:"
-        terraform output -json webserver_ips
-        terraform output -json webserver_ips | jq -r '.[]' | while read ip; do
-          echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@${BASTION_IP}'\"" >> inventory/dynamic.ini
-        done
-        echo "Terraform output for bastion_public_ip:"
-        terraform output -json bastion_public_ip
+        # Витягуємо IP бастіона спочатку
         BASTION_IP=$(terraform output -json bastion_public_ip | jq -r '.')
         echo "BASTION_IP=$BASTION_IP" >> $GITHUB_ENV
         echo "bastion_ip=$BASTION_IP" >> $GITHUB_OUTPUT
+        echo "Extracted BASTION_IP: $BASTION_IP"
+
+        # Витягуємо IP інстансів
+        WEBSERVER_IPS=$(terraform output -json webserver_ips | jq -r '.[]')
+        echo "WEBSERVER_IPS=$WEBSERVER_IPS"
+
+        # Генеруємо інвентар
+        mkdir -p inventory
+        echo "[webservers]" > inventory/dynamic.ini
+        if [ -z "$WEBSERVER_IPS" ]; then
+          echo "No webserver IPs found, exiting..."
+          exit 1
+        fi
+        for ip in $WEBSERVER_IPS; do
+          echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@$BASTION_IP'\"" >> inventory/dynamic.ini
+        done
         echo "Generated inventory file content:"
         cat inventory/dynamic.ini
 
@@ -127,6 +135,6 @@ jobs:
           echo "File ansible/playbooks/deploy.yml not found!"
           exit 1
         fi
-        ansible-playbook -i inventory/dynamic.ini ansible/playbooks/deploy.yml
+        ansible-playbook -i inventory/dynamic.ini ansible/playbooks/deploy.yml -v
       env:
         ANSIBLE_HOST_KEY_CHECKING: False
