--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,26 +75,30 @@ jobs:
       run: |
         # Витягуємо IP бастіона спочатку
         BASTION_IP=$(terraform output -json bastion_public_ip | jq -r '.')
+        if [ -z "$BASTION_IP" ]; then
+          echo "BASTION_IP is empty, exiting..."
+          exit 1
+        fi
         echo "BASTION_IP=$BASTION_IP" >> $GITHUB_ENV
         echo "bastion_ip=$BASTION_IP" >> $GITHUB_OUTPUT
         echo "Extracted BASTION_IP: $BASTION_IP"
 
         # Витягуємо IP інстансів
         WEBSERVER_IPS=$(terraform output -json webserver_ips | jq -r '.[]')
-        echo "WEBSERVER_IPS=$WEBSERVER_IPS"
-
-        # Генеруємо інвентар
-        mkdir -p inventory
-        echo "[webservers]" > inventory/dynamic.ini
         if [ -z "$WEBSERVER_IPS" ]; then
           echo "No webserver IPs found, exiting..."
           exit 1
         fi
+        echo "WEBSERVER_IPS=$WEBSERVER_IPS"
+
+        # Генеруємо інвентар у ansible/inventory
+        mkdir -p ansible/inventory
+        echo "[webservers]" > ansible/inventory/dynamic.ini
         for ip in $WEBSERVER_IPS; do
-          echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@$BASTION_IP'\"" >> inventory/dynamic.ini
+          echo "$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@$BASTION_IP'\"" >> ansible/inventory/dynamic.ini
         done
         echo "Generated inventory file content:"
-        cat inventory/dynamic.ini
+        cat ansible/inventory/dynamic.ini
 
   ansible:
     name: 'Ansible Deployment'
@@ -135,6 +139,6 @@ jobs:
           echo "File ansible/playbooks/deploy.yml not found!"
           exit 1
         fi
-        ansible-playbook -i inventory/dynamic.ini ansible/playbooks/deploy.yml -v
+        ansible-playbook -i ansible/inventory/dynamic.ini ansible/playbooks/deploy.yml -v
       env:
         ANSIBLE_HOST_KEY_CHECKING: False
