--- a/ansible/inventory/production.ini
+++ b/ansible/inventory/production.ini
@@ -1,3 +1,6 @@
-[webservers]
-10.0.0.44 ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem ansible_ssh_common_args="-o ProxyCommand='ssh -W %h:%p -i /mnt/c/Users/dmisi/.ssh/bastion-key.pem ubuntu@52.91.13.103'"
-10.0.0.71 ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem ansible_ssh_common_args="-o ProxyCommand='ssh -W %h:%p -i /mnt/c/Users/dmisi/.ssh/bastion-key.pem ubuntu@52.91.13.103'"
+[llm_servers]
+llm1 ansible_host=10.0.0.91 ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem ansible_ssh_common_args="-o ProxyCommand='ssh -W %h:%p -i /mnt/c/Users/dmisi/.ssh/bastion-key.pem ubuntu@34.203.215.206'"
+llm2 ansible_host=10.0.0.52 ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem ansible_ssh_common_args="-o ProxyCommand='ssh -W %h:%p -i /mnt/c/Users/dmisi/.ssh/bastion-key.pem ubuntu@34.203.215.206'"
+
+[monitoring]
+monitor ansible_host=54.196.211.82 ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem
