Add database ansible configuration

--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -1,3 +1,6 @@
+- name: Configure database
+  import_playbook: database.yml
+
 - name: Configure LLM servers (Ollama)
   import_playbook: llm_servers.yml
 
