--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -107,12 +107,12 @@ jobs:
         echo "[llm_servers]" > ansible/inventory/dynamic.ini
         i=1
         for ip in $LLM_SERVER_IPS; do
-          echo "llm$i ansible_host=$ip ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i /mnt/c/Users/dmisi/.ssh/bastion-key.pem ubuntu@$BASTION_IP'\"" >> ansible/inventory/dynamic.ini
+          echo "llm$i ansible_host=$ip ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem ansible_ssh_common_args=\"-o ProxyCommand='ssh -W %h:%p -i ~/.ssh/bastion-key.pem ubuntu@$BASTION_IP'\"" >> ansible/inventory/dynamic.ini
           i=$((i + 1))
         done
 
         echo -e "\n[monitoring]" >> ansible/inventory/dynamic.ini
-        echo "monitor ansible_host=$MONITORING_IP ansible_user=ubuntu ansible_ssh_private_key_file=/mnt/c/Users/dmisi/.ssh/bastion-key.pem" >> ansible/inventory/dynamic.ini
+        echo "monitor ansible_host=$MONITORING_IP ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/bastion-key.pem" >> ansible/inventory/dynamic.ini
 
         echo "Generated inventory file content:"
         cat ansible/inventory/dynamic.ini
