--- a/ansible/playbooks/roles/database/vars/main.yml
+++ b/ansible/playbooks/roles/database/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 db_name: "mydb"
-db_host: "postgres-llm.us-east-1.rds.amazonaws.com"
+db_host: "postgres-llm.cipiqwsk4k7o.us-east-1.rds.amazonaws.com"
 db_port: 5432
 db_user: "denys"
 db_password: "password123"
