--- a/ansible/playbooks/roles/monitoring/vars/main.yml
+++ b/ansible/playbooks/roles/monitoring/vars/main.yml
@@ -1,6 +1,10 @@
-prometheus_version: "2.47.0"
-grafana_port: 3000
+---
 prometheus_user: "prometheus"
 prometheus_group: "prometheus"
-prometheus_binary_path: "/usr/local/bin/prometheus/prometheus"
+prometheus_version: "2.53.1"
+grafana_port: 3000
 prometheus_config_path: "/etc/prometheus/prometheus.yml"
+prometheus_binary_path: "/usr/local/bin/prometheus/prometheus"
+nginx_log: "/var/log/nginx.log"
+openwebui_path: "/opt/openwebui"
+openwebui_log: "/var/log/openwebui.log"
