--- a/ansible/playbooks/roles/monitoring/vars/main.yml
+++ b/ansible/playbooks/roles/monitoring/vars/main.yml
@@ -8,3 +8,8 @@ prometheus_binary_path: "/usr/local/bin/prometheus/prometheus"
 nginx_log: "/var/log/nginx.log"
 openwebui_path: "/opt/openwebui"
 openwebui_log: "/var/log/openwebui.log"
+db_name: "mydb"
+db_host: "postgres-llm.cipiqwsk4k7o.us-east-1.rds.amazonaws.com"
+db_port: 5432
+db_user: "denys"
+db_password: "password123"
